--- a/src/Services/Discount.Grpc/Discount.Grpc.csproj
+++ b/src/Services/Discount.Grpc/Discount.Grpc.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="Dapper" Version="2.1.11" />
+	<PackageReference Include="Npgsql" Version="7.0.6" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
   </ItemGroup>
 
