--- a/src/Services/Discount.Grpc/Discount.Grpc.csproj
+++ b/src/Services/Discount.Grpc/Discount.Grpc.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 	<PackageReference Include="Dapper" Version="2.1.11" />
 	<PackageReference Include="Npgsql" Version="7.0.6" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
