--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "OrderDB": "Server=DESKTOP-36RFDVG\\SQLEXPRESS;Database=OrderDB;Trusted_Connection=True;TrustedServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
