--- a/src/Services/Basket.API/Basket.API.csproj
+++ b/src/Services/Basket.API/Basket.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -9,20 +9,22 @@
   <ItemGroup>
 	<PackageReference Include="CoreApiResponse" Version="1.0.1" />
 	<PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
+	<PackageReference Include="MassTransit" Version="7.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.11" />
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\BuildingBlocks\EventBus.Messages\EventBus.Messages.csproj" />
+    <ProjectReference Include="..\Discount.Grpc\Discount.Grpc.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Protobuf Include="..\Discount.Grpc\Protos\discount.proto" GrpcServices="Client">
-      <Link>Protos\discount.proto</Link>
-    </Protobuf>
-  </ItemGroup>
+    <ItemGroup>
+	    <Protobuf Include="..\Discount.Grpc\Protos\discount.proto" GrpcServices="Client">
+		    <Link>Protos\discount.proto</Link>
+	    </Protobuf>
+    </ItemGroup>
 
 </Project>
