--- a/src/Services/Basket.API/appsettings.json
+++ b/src/Services/Basket.API/appsettings.json
@@ -2,6 +2,9 @@
   "GrpcSettings": {
     "DiscountGrpcUrl": "https://localhost:5004"
   },
+  "EventBusSettings": {
+    "RabbitMqHost": "amqp://guest:guest@localhost:5672"
+  },
   "ConnectionStrings": {
     "BasketDb": "localhost:6379"
   },
