--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "OrderDB": "Server=DESKTOP-36RFDVG\\SQLEXPRESS;Database=OrderDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "EventBusSettings": {
+    "RabbitMqHost": "amqp://guest:guest@localhost:5672"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
